--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-@import 'reset';
+@import './_reset.scss';
 
 :root {
   font-size: 62.5%;
