--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@import './_reset.scss';
+@import './scss/_reset.scss';
 
 :root {
   font-size: 62.5%;
@@ -10,8 +10,11 @@
 
 body {
   display: flex;
-  flex-direction: column;
   min-height: 100vh;
-
+  flex-direction: column;
   font-size: 1.5rem;
+}
+
+#root {
+  height: 100%;
 }
