--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
 
 @import './scss/_reset.scss';
 
+// import fonts
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Nunito:wght@300;400;600;700;800&display=swap');
 :root {
   font-size: 62.5%;
 }
@@ -13,6 +15,8 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-size: 1.5rem;
+  // font-family: 'Gochi Hand', cursive;
+  font-family: 'Nunito', sans-serif;
 }
 
 #root {
