parsing categories pulled from endpoint

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,8 @@
+// General Colors
+$color-black: black;
+$color-white: white;
+
+// Background Colors
 $color-background: #f3fcf0;
+
+// Shadow-box colors
