styled the header and footer component of the page

--- a/src/UIKit/UIIcon/UIIcon.scss
+++ b/src/UIKit/UIIcon/UIIcon.scss
@@ -1,4 +1,10 @@
-.icon__container {
-  .icon__content {
-  }
-}
+// .icon__container {
+//   display: flex;
+//   &--content {
+//     &__text {
+//     }
+
+//     &__social-icon {
+//     }
+//   }
+// }
