--- a/src/components/Cart/CartItem/CartItem.scss
+++ b/src/components/Cart/CartItem/CartItem.scss
@@ -6,6 +6,7 @@
   height: 30rem;
   width: 30rem;
   padding: 2rem;
+  margin-bottom: 2rem;
 
   //   width: 100%;
   &-1 {
@@ -34,9 +35,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    &_actions-1 {
+    &__actions-1 {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 60%;
+      &__text {
+        display: flex;
+        justify-content: center;
+        padding: 0.5rem 1rem;
+        border: 1px solid grey;
+      }
     }
-    &_actions-2 {
+    &__actions-2 {
     }
   }
 }
