--- a/src/UIKit/UICard/UICard.scss
+++ b/src/UIKit/UICard/UICard.scss
@@ -1,18 +1,46 @@
 .card {
   display: flex;
-  width: 10rem;
-  height: 15rem;
+  justify-content: center;
+  width: 25rem;
+  height: 30rem;
   border-radius: 1rem;
   background-color: antiquewhite;
+  border-radius: 1rem;
+  margin: 2rem;
   &--container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    padding: 2rem;
+
     &-1 {
+      height: 70%;
+      margin-bottom: 1.2rem;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
 
     &-2 {
+      height: 30%;
+      display: flex;
+      flex-direction: column;
+      margin: 1.2rem 0rem;
+
+      &__info {
+        display: flex;
+        justify-content: space-between;
+        &__text {
+          font-size: 1.5rem;
+        }
+        &__text:last-child {
+          font-weight: 600;
+          font-size: 1.6rem;
+        }
+      }
     }
   }
 }
