spilting code and completed layout for products and categories components

--- a/src/components/Accounts/Accounts.scss
+++ b/src/components/Accounts/Accounts.scss
@@ -1,11 +1,16 @@
 .accounts {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex: 1;
 
   &__container {
     display: flex;
-    justify-content: center;
+
     align-items: center;
+    width: 65rem;
+    height: 55rem;
+    background-color: purple;
+    flex-direction: column;
   }
 }
