completed the products Viewed Section

--- a/src/components/ProductPage/ProductSection/ProductSection.scss
+++ b/src/components/ProductPage/ProductSection/ProductSection.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-evenly;
     height: 60%;
+    border-bottom: white solid 0.1rem;
   }
 
   &__container-2 {
