--- a/src/components/ProductPage/ProductSection/ProductSection.scss
+++ b/src/components/ProductPage/ProductSection/ProductSection.scss
@@ -3,17 +3,28 @@
   justify-content: center;
   background-color: rgb(241, 185, 241);
   height: 50vh;
-  flex-direction: column;
+  width: 100%;
 
-  &__container-1 {
+  &__container {
     display: flex;
-    justify-content: space-evenly;
-    height: 60%;
-    border-bottom: white solid 0.1rem;
-  }
+    flex-direction: column;
+    width: 90%;
+    margin-top: 5rem;
+    margin-bottom: 1.5rem;
 
-  &__container-2 {
-    display: flex;
-    height: 40%;
+    &-1 {
+      display: flex;
+      justify-content: center;
+      height: 75%;
+      width: 100%;
+      border-bottom: white solid 0.1rem;
+    }
+
+    &-2 {
+      display: flex;
+      justify-content: center;
+      height: 25%;
+      width: 100%;
+    }
   }
 }
