--- a/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
+++ b/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
@@ -1,4 +1,17 @@
 .product-view {
   display: flex;
-  width: 100%;
+  width: 60%;
+  height: 100%;
+
+  .product-view__container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .product-view__container--img {
+    width: 100%;
+    height: 100%;
+
+    object-fit: contain;
+  }
 }
