--- a/src/components/HomePage/Hero-Section/HeroSection.scss
+++ b/src/components/HomePage/Hero-Section/HeroSection.scss
@@ -5,22 +5,51 @@
   &--container {
     display: flex;
     justify-content: space-evenly;
+
     width: 80%;
+    height: 100%;
 
-    &-1 {
-      display: flex;
-      justify-content: center;
-
-      &__btn {
-      }
-    }
-
+    &-1,
     &-2 {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-end;
+      width: 50%;
+      height: inherit;
+      position: relative;
+    }
 
-      &__btn {
-      }
+    .container-1__body-1,
+    .container-2__body-2 {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: inherit;
+    }
+
+    .hero--img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .container-1__content,
+    .container-2__content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      width: 70%;
+      position: absolute;
+      margin: 2rem;
+    }
+
+    .hero-section__btn {
+      width: 100%;
+      padding: 1rem 2rem;
+      background-color: crimson;
+      border-radius: 1rem;
     }
   }
 }
