--- a/src/components/ProductPage/ProductPage.scss
+++ b/src/components/ProductPage/ProductPage.scss
@@ -1,6 +1,6 @@
-// .product-page {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   width: 100%;
-// }
+.product-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
