--- a/src/components/Information/Footer/Footer.scss
+++ b/src/components/Information/Footer/Footer.scss
@@ -7,12 +7,12 @@
 
   background-color: $color-black;
   color: $color-white;
-  height: 20vh;
+  height: 15vh;
 
   &--container-1 {
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.75rem;
     width: 60%;
 
     &__text {
@@ -29,5 +29,6 @@
   &--container-2 {
     display: flex;
     justify-content: center;
+    margin-bottom: 1.5rem 0rem;
   }
 }
