--- a/src/components/ProductPage/ProductPage.scss
+++ b/src/components/ProductPage/ProductPage.scss
@@ -1,6 +1,34 @@
-// .product-page {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   width: 100%;
-// }
+.product-page {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+
+  &__container-1,
+  &__container-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  &__container-1 {
+    height: 50vh;
+    background-color: rgb(219, 146, 219);
+  }
+
+  &__container-2 {
+    height: 50vh;
+    background-color: rgb(246, 181, 246);
+  }
+
+  &__container-3 {
+    // height: 50vh;
+  }
+
+  .spinner__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+}
