--- a/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
+++ b/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
@@ -1,12 +1,14 @@
 .product-checkout {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 40%;
-  height: 100%;
+  justify-content: center;
+  flex: 1;
 
   &__container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
 
     &-1 {
     }
