--- a/src/components/ProductPage/ProductSection/ProductSection.scss
+++ b/src/components/ProductPage/ProductSection/ProductSection.scss
@@ -1,8 +1,7 @@
 .product-section {
   display: flex;
   justify-content: center;
-  background-color: rgb(241, 185, 241);
-  height: 50vh;
+  height: 100%;
   width: 100%;
 
   &__container {
@@ -11,19 +10,33 @@
     width: 90%;
     margin-top: 5rem;
     margin-bottom: 1.5rem;
+    height: inherit;
 
     &-1 {
       display: flex;
       justify-content: center;
-      height: 75%;
-      width: 100%;
+      height: 70%;
       border-bottom: white solid 0.1rem;
+      width: 100%;
+
+      .product-section__gallery,
+      .product-section__checkout {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+      }
+
+      // .product-section__checkout {
+      //   width: 50%;
+
+      //   // align-items: center;
+      // }
     }
 
     &-2 {
       display: flex;
       justify-content: center;
-      height: 25%;
+      height: 30%;
       width: 100%;
     }
   }
