--- a/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
+++ b/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
@@ -1,17 +1,16 @@
 .product-view {
   display: flex;
-  width: 60%;
+  justify-content: center;
+  width: 100%;
   height: 100%;
 
-  .product-view__container {
+  &__container {
     width: 100%;
     height: 100%;
-  }
-
-  .product-view__container--img {
-    width: 100%;
-    height: 100%;
-
-    object-fit: contain;
+    &--img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
