--- a/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
+++ b/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
@@ -1,22 +1,143 @@
 .product-checkout {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex: 1;
 
   &__container {
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 80%;
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+
+    &-1,
+    &-2,
+    &-3,
+    &-4,
+    &-5 {
+      width: 100%;
+      display: flex;
+      // width: 80%;
+      // justify-content: center;
+      // margin-bottom: 1rem;
+    }
 
     &-1 {
+      align-items: center;
+      margin-left: 2rem;
+      height: 15%;
     }
 
     &-2 {
+      flex-direction: column;
+      height: 40%;
+      // justify-content: space-evenly;
+
+      .container-2__1 {
+        height: 60%;
+        display: flex;
+        align-items: center;
+
+        .container-2__text-1 {
+          font-size: 2.2rem;
+          letter-spacing: 0.15rem;
+          line-height: 2.4rem;
+          text-transform: capitalize;
+          font-weight: 300;
+        }
+      }
+
+      .container-2__2 {
+        height: 40%;
+        display: flex;
+        align-items: center;
+        .container-2__text-2 {
+          font-size: 1.7rem;
+          font-weight: 700;
+          letter-spacing: 0.1rem;
+        }
+      }
     }
 
-    &- {
+    &-3 {
+      height: 15%;
+      align-items: center;
+
+      .container-3__text-1 {
+        margin-right: 1rem;
+        font-weight: 300;
+        font-size: 1.4rem;
+        letter-spacing: 0.1rem;
+      }
+
+      .container-3__text-2 {
+        text-transform: uppercase;
+        letter-spacing: 0.15rem;
+        font-size: 1.4rem;
+        font-weight: 400;
+      }
+    }
+
+    &-4 {
+      height: 20%;
+      align-items: center;
+      justify-content: center;
+
+      .checkout__section {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &--btn-1,
+        &--btn-2 {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          // width: 35%;
+          background-color: grey;
+        }
+
+        &--quantity {
+          width: 5rem;
+          height: 70%;
+          // background-color: red;
+          border-bottom: 0.5rem solid red;
+          // text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        &--btn-2 {
+        }
+      }
+    }
+    &-5 {
+      height: 20%;
+      align-items: center;
+      justify-content: center;
+
+      .checkout__buttons {
+        display: flex;
+        align-items: center;
+        width: 80%;
+
+        &--1 {
+          width: 80%;
+          display: flex;
+        }
+
+        &--2 {
+          width: 20%;
+          display: flex;
+        }
+      }
     }
   }
 }
