--- a/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
+++ b/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
@@ -1,13 +1,16 @@
 .product-category {
   display: flex;
   justify-content: center;
+  // flex-basis: 50rem;
+  width: 50rem;
+  height: 30rem;
+  margin: 1rem;
   &__container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 25rem;
-    // width: 25rem;
+    height: 100%;
     margin: 1rem;
     width: 100%;
     border-radius: 0.5rem;
@@ -22,6 +25,8 @@
       &--img {
         width: 100%;
         height: 100%;
+        object-position: center;
+        object-fit: cover;
       }
     }
 
