--- a/src/components/HomePage/Hero-Section/HeroSection.scss
+++ b/src/components/HomePage/Hero-Section/HeroSection.scss
@@ -33,6 +33,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center;
     }
 
     .container-1__content,
