--- a/src/components/HomePage/ExploreMarket/ExploreMarket.scss
+++ b/src/components/HomePage/ExploreMarket/ExploreMarket.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  //   height: 50vh;
+  height: 25vh;
   &__container-1 {
     width: 100%;
     height: 50%;
@@ -13,6 +13,7 @@
       height: 50rem;
       object-fit: cover;
       object-position: center;
+      opacity: 0.7;
     }
   }
 
