--- a/src/components/HomePage/ExploreMarket/ExploreMarket.scss
+++ b/src/components/HomePage/ExploreMarket/ExploreMarket.scss
@@ -5,7 +5,6 @@
   height: 25vh;
   &__container-1 {
     width: 100%;
-    height: 50%;
     position: relative;
 
     .explore-img {
@@ -13,37 +12,38 @@
       height: 50rem;
       object-fit: cover;
       object-position: center;
-      opacity: 0.7;
     }
   }
 
   &__container-2 {
-    height: 50%;
-    width: 40%;
     display: flex;
     flex-direction: column;
     position: absolute;
-    // justify-content: space-evenly;
     align-items: center;
-    // background-color: white;
+    background-color: white;
+    padding: 5rem;
+    text-align: center;
+    opacity: 0.8;
 
     &__heading {
       font-size: 2.5rem;
-      line-height: 2.4rem;
       letter-spacing: 0.1rem;
-      font-weight: 600;
-      margin-bottom: 1.5rem;
+      font-weight: 500;
+      margin-bottom: 3rem;
     }
 
     &__text-2 {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       line-height: 2.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 3rem;
+      word-spacing: 0.1rem;
     }
   }
 
   .market-place__container {
     &--btn {
+      padding: 1rem 3rem;
+      background-color: green;
     }
   }
 }
