fixing the marketplace

--- a/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
+++ b/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
@@ -1,7 +1,7 @@
 .product-category {
   display: flex;
   justify-content: center;
-  // flex-basis: 50rem;
+  // width: 100%;
   width: 50rem;
   height: 30rem;
   margin: 1rem;
