--- a/src/components/HomePage/ExploreMarket/ExploreMarket.scss
+++ b/src/components/HomePage/ExploreMarket/ExploreMarket.scss
@@ -46,4 +46,10 @@
       background-color: green;
     }
   }
+
+  @media screen and (max-width: 450px) {
+    .market-place__container-2 {
+      padding: 3.5rem;
+    }
+  }
 }
