market place completed

--- a/src/components/MarketPlace/MarketPlace.scss
+++ b/src/components/MarketPlace/MarketPlace.scss
@@ -1,19 +1,19 @@
-.market-place {
-  display: flex;
-  justify-content: center;
-  flex: 1;
+// .market {
+//   display: flex;
+//   justify-content: center;
+//   flex: 1;
 
-  &__container-1,
-  &__container-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+//   &__container-1,
+//   &__container-3 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
 
-  &__container-2 {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-  }
-}
+//   &__container-2 {
+//     display: flex;
+//     flex-wrap: wrap;
+//     width: 100%;
+//     justify-content: center;
+//   }
+// }
