fixing homepage mobile responsiveness

--- a/src/components/Information/Header/Header.scss
+++ b/src/components/Information/Header/Header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 7rem;
+  height: 7vh;
   &--container-1 {
     h1 {
       font-family: 'Gochi Hand', cursive;
