--- a/src/components/ProductPage/SimilarProducts/SimilarProducts.scss
+++ b/src/components/ProductPage/SimilarProducts/SimilarProducts.scss
@@ -4,6 +4,8 @@
   align-items: center;
   background-color: white;
   height: 100%;
+  overflow-x: auto;
+  width: 100%;
 
   &--container {
     display: flex;
@@ -11,15 +13,23 @@
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
+    width: 100%;
 
     &__1 {
-      height: 10%;
+      height: 20%;
+      width: 100%;
     }
 
     &__2 {
-      height: 90%;
+      height: 80%;
+      width: 100%;
       display: flex;
       justify-content: center;
     }
+  }
+
+  .card-similar-products {
+    width: 20rem;
+    height: 30rem;
   }
 }
