--- a/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
+++ b/src/components/CategoriesPage/ProductCategory/ProductCategory.scss
@@ -1,10 +1,10 @@
 .product-category {
   display: flex;
   justify-content: center;
-  // width: 100%;
   width: 50rem;
   height: 30rem;
   margin: 1rem;
+  border-radius: 1rem;
   &__container {
     display: flex;
     flex-direction: column;
@@ -13,14 +13,13 @@
     height: 100%;
     margin: 1rem;
     width: 100%;
-    border-radius: 0.5rem;
-    background-color: grey;
 
     .category__main {
       width: 100%;
       height: 100%;
       display: flex;
       position: relative;
+      // background-color: grey;
 
       &--img {
         width: 100%;
@@ -36,16 +35,25 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background-color: yellow;
+      background-color: #161616;
       padding: 1rem;
       border-radius: 0.4rem;
+      color: white;
+      opacity: 0.9;
+
+      transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 
       &__heading {
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
       }
 
       &__text {
       }
+    }
+
+    .category__content:active,
+    .category__content:hover {
+      background-color: crimson;
     }
   }
 }
