--- a/src/components/HomePage/ExploreMarket/ExploreMarket.scss
+++ b/src/components/HomePage/ExploreMarket/ExploreMarket.scss
@@ -24,7 +24,7 @@
     background-color: white;
     padding: 5rem;
     text-align: center;
-    opacity: 0.8;
+    opacity: 0.9;
 
     &__heading {
       font-size: 2.5rem;
@@ -39,18 +39,25 @@
       margin-bottom: 3rem;
       word-spacing: 0.1rem;
     }
-  }
 
-  .market-place__container {
-    &--btn {
-      padding: 1rem 3rem;
-      background-color: green;
+    .explore-btn {
+      padding: 1rem 2.5rem;
+      color: white;
+      background-color: black;
+      border-radius: 0.7rem;
+      opacity: 1;
+      transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .explore-btn:active,
+    .explore-btn:hover {
+      background-color: crimson;
     }
   }
 
   @media screen and (max-width: 450px) {
-    .market-place__container-2 {
-      padding: 3.5rem;
-    }
+    // .market-place__container-2 {
+    //   padding: 3.5rem;
+    // }
   }
 }
