--- a/src/components/HomePage/Hero-Section/HeroSection.scss
+++ b/src/components/HomePage/Hero-Section/HeroSection.scss
@@ -1,6 +1,7 @@
 .hero-section {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 40vh;
   &--container {
     display: flex;
@@ -50,8 +51,15 @@
     .hero-section__btn {
       width: 100%;
       padding: 1rem 2rem;
-      background-color: crimson;
+      background-color: #222121;
       border-radius: 1rem;
+      transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+      color: white;
+    }
+
+    .hero-section__btn:hover,
+    .hero-section__btn:active {
+      background-color: rgb(218, 44, 78);
     }
   }
 
