--- a/src/components/HomePage/HomeOptions/HomeOptions.scss
+++ b/src/components/HomePage/HomeOptions/HomeOptions.scss
@@ -4,7 +4,9 @@
   width: 100%;
   height: 4.5rem;
   align-items: center;
-  background-color: rgba(59, 130, 246, 1);
+  color: white;
+  // background-color: #3b82f6;
+  background-color: #161616;
 
   &--container {
     width: 33.33%;
@@ -15,4 +17,16 @@
     &__text {
     }
   }
+
+  // .active-link-1 {
+  //   background-color: red;
+  // }
+
+  // .active-link-2 {
+  //   background-color: red;
+  // }
+
+  // .active-link-3 {
+  //   background-color: red;
+  // }
 }
