--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -2,89 +2,196 @@
   display: flex;
   justify-content: center;
   flex: 1;
-  width: 100%;
+
   &__container {
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    width: 60%;
-    border: aqua solid 0.2rem;
+    align-items: center;
+    width: 80%;
+    padding: 2rem;
+    // border: blue solid 1rem;
 
     &-1 {
-      width: 100%;
-      height: 4rem;
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
+      height: 10%;
+      border-bottom: solid grey 0.1rem;
+      width: 100%;
+
       &__text {
-        font-size: 2rem;
-        text-transform: uppercase;
-        font-weight: 600;
-        padding: 3rem;
+        font-size: 2.2rem;
+        letter-spacing: 0.2rem;
+        font-weight: 400;
+        line-height: 2.2;
+        margin-left: 2rem;
       }
     }
 
     &-2 {
-      width: 100%;
-      padding: 2rem;
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
+      height: 90%;
+      width: 100%;
+
+      &__products {
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-bottom: solid grey 0.1rem;
+        width: 100%;
+
+        .cart-products__container-1 {
+          display: flex;
+          flex: 1;
+          justify-content: center;
+          width: 100%;
+
+          .cart-products__error {
+            display: flex;
+            justify-content: center;
+            background-color: crimson;
+            width: 45%;
+            padding: 2rem;
+
+            &--text {
+              font-size: 2rem;
+              color: white;
+              font-weight: 600;
+              letter-spacing: 0.1rem;
+              line-height: 1.8;
+              text-transform: capitalize;
+            }
+          }
+        }
+
+        .cart-products__container-2 {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          width: 100%;
+          height: 100%;
+          overflow-y: auto;
+          padding: 2rem;
+        }
+      }
+
+      &__checkout {
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        &--content-1 {
+          display: flex;
+          justify-content: flex-start;
+          height: 20%;
+          width: 100%;
+          align-items: center;
+          border-bottom: solid grey 0.1rem;
+
+          &__text {
+            font-size: 2.2rem;
+            letter-spacing: 0.2rem;
+            font-weight: 400;
+            line-height: 2.2;
+            margin-left: 2rem;
+          }
+        }
+
+        &--content-2 {
+          height: 80%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 100%;
+          margin-bottom: 1rem;
+
+          .checkout__container-1,
+          .checkout__container-2,
+          .checkout__container-3 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 80%;
+            height: 33.33%;
+          }
+
+          .checkout__container-1__text,
+          .checkout__container-2__text {
+            font-size: 1.4rem;
+            letter-spacing: 0.1rem;
+            line-height: 2.2;
+          }
+
+          .checkout__container-1__text:last-child,
+          .checkout__container-2__text:last-child {
+            font-size: 1.6rem;
+            font-weight: 500;
+            text-transform: uppercase;
+          }
+
+          .checkout__container-2__text:last-child {
+            font-weight: 500;
+            text-transform: uppercase;
+          }
+
+          .checkout__container-3 {
+            justify-content: center;
+
+            &__btn--container {
+              width: 40%;
+
+              .checkout-btn {
+                width: 100%;
+                color: white;
+                background-color: #161616;
+                outline: none;
+                padding: 1rem;
+                transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+                border-radius: 0.7rem;
+                text-transform: uppercase;
+                letter-spacing: 0.2rem;
+              }
+
+              .checkout-btn:hover,
+              .checkout-btn:active {
+                background-color: crimson;
+              }
+            }
+          }
+        }
+      }
     }
   }
 
-  &__container--checkout {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    border: 2px solid green;
-    margin-top: 10vh;
-    height: 30rem;
-    padding: 1.5rem;
-
-    &--content-1 {
-      display: flex;
-      margin: 1rem 0rem;
-      &__text {
-        font-weight: 600;
-        font-size: 2.5rem;
-        text-transform: uppercase;
-      }
+  @media screen and (max-width: 900px) {
+    .cart__container {
+      width: 90%;
     }
-    &--content-2 {
-      display: flex;
-      flex-direction: column;
-      margin: 1.4rem 0rem;
-      .checkout__container-1,
-      .checkout__container-2 {
-        display: flex;
-        justify-content: space-between;
-        margin: 0rem 1.2rem;
-        margin-bottom: 1.2rem;
-      }
-      .checkout__container-1__text,
-      .checkout__container-2__text {
-        font-weight: 400;
-        font-size: 1.5rem;
-      }
-      .checkout__container-1__text:last-child {
-        font-weight: 600;
-        font-size: 1.7rem;
-      }
+  }
 
-      .checkout__container-3 {
-        display: flex;
-        justify-content: center;
-        margin: 0rem 1.2rem;
+  @media screen and (max-width: 600px) {
+    .cart__container {
+      width: 95%;
+      padding: 0.5rem;
+    }
+  }
 
-        &__btn {
-          padding: 1rem 0rem;
-          width: 100%;
-          background-color: green;
-          text-align: center;
-          border-radius: 0.5rem;
-          cursor: pointer;
-        }
-      }
+  @media screen and (max-width: 450px) {
+    .cart__container {
+      width: 100%;
+      padding: 0.5rem;
+    }
+
+    .cart-products__error {
+    }
+
+    .cart-products__container-2 {
+      padding: 0.5rem;
     }
   }
 }
