--- a/src/components/Cart/CartItem/CartItem.scss
+++ b/src/components/Cart/CartItem/CartItem.scss
@@ -1,53 +1,117 @@
 .cart-item--container {
   display: flex;
-  flex-direction: column;
-  border-radius: 1rem;
-  border: 1px black solid;
-  height: 30rem;
-  width: 30rem;
-  padding: 2rem;
-  margin-bottom: 2rem;
+  width: 100%;
+  height: 10rem;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 0.5rem;
+  border-bottom: 0.2rem #161616 solid;
 
-  //   width: 100%;
-  &-1 {
+  &-1,
+  &-2,
+  &-3,
+  &-4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
-    margin-bottom: 1rem;
+    height: 100%;
+  }
+
+  &-1 {
+    width: 15%;
+    border-radius: 0.7rem;
     img {
+      width: 100%;
       height: 100%;
-      object-position: cover;
+      object-fit: cover;
+      object-position: center;
+      border-radius: inherit;
     }
   }
   &-2 {
+    width: 50%;
     display: flex;
     flex-direction: column;
-    &_text {
-      text-transform: capitalize;
+    align-items: center;
+
+    &__content-1,
+    &__content-2,
+    &__content-3 {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      margin-left: 4rem;
+      height: 33.33%;
     }
 
-    &_text:nth-child(2) {
-      font-weight: 600;
+    .cart-item--info__text-1 {
+      margin-right: 0.5rem;
+      font-size: 1rem;
+      text-transform: uppercase;
+      font-weight: 300;
+    }
+
+    .cart-item--info__text-2 {
+      font-size: 1.2rem;
+      letter-spacing: 0.1rem;
+      text-transform: capitalize;
     }
   }
   &-3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &__actions-1 {
+    width: 25%;
+    height: 100%;
+
+    &__content {
+      width: 90%;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: center;
-      width: 60%;
-      &__text {
-        display: flex;
-        justify-content: center;
-        padding: 0.5rem 1rem;
-        border: 1px solid grey;
+
+      &--quantity {
+        width: 33.3%;
+        padding: 0.3rem 1rem;
+        border-radius: 0.5rem;
+        background-color: white;
+        border-bottom: 0.2rem #161616 solid;
+        color: crimson;
+        margin: 0.3rem;
+        text-align: center;
+      }
+
+      .cart-item__btn--container {
+        border-radius: 0.7rem;
+        width: 33.3%;
+
+        &__content {
+          padding: 0.3rem 0.5rem;
+          border-radius: 0.5rem;
+          background-color: #161616;
+          color: white;
+          transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+          cursor: pointer;
+
+          &--text,
+          &--icon {
+            margin-right: 0rem;
+          }
+        }
+
+        &__content:hover,
+        &__content:active {
+          background-color: crimson;
+        }
       }
     }
-    &__actions-2 {
+  }
+
+  &-4 {
+    width: 10%;
+
+    &__content {
+      width: 80%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
