--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -9,7 +9,6 @@
     align-items: center;
     width: 80%;
     padding: 2rem;
-    // border: blue solid 1rem;
 
     &-1 {
       display: flex;
@@ -46,13 +45,15 @@
 
         .cart-products__container-1 {
           display: flex;
-          flex: 1;
+          height: 100%;
           justify-content: center;
+          align-items: center;
           width: 100%;
 
           .cart-products__error {
             display: flex;
             justify-content: center;
+            align-items: center;
             background-color: crimson;
             width: 45%;
             padding: 2rem;
