--- a/src/components/Accounts/Account-Actions/AccountAction.scss
+++ b/src/components/Accounts/Account-Actions/AccountAction.scss
@@ -2,24 +2,40 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 10%;
-  border-bottom: white solid 0.2rem;
+  height: 100%;
+  border-bottom: white solid 0.1rem;
   &__container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
+    height: 100%;
+    border-bottom: solid 0.1rem #161616;
 
     &__heading-1,
     &__heading-2 {
       display: flex;
+      align-items: center;
       width: 50%;
+      height: 100%;
       justify-content: center;
+      transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    &__heading-1:hover,
+    &__heading-2:hover {
+      background-color: crimson;
+      color: white;
+    }
+
+    .heading--active {
+      background-color: crimson;
+      color: white;
     }
   }
 
   .account-action__text {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     letter-spacing: 0.2rem;
     text-transform: uppercase;
     padding: 2rem;
