--- a/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
+++ b/src/components/ProductPage/ProductSection/ProductCheckout/ProductCheckout.scss
@@ -2,14 +2,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1;
+  height: 100%;
+  width: 100%;
 
   &__container {
-    width: 60%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 80%;
+    height: 100%;
     background-color: white;
     padding: 1.5rem;
     border-radius: 1.5rem;
@@ -99,15 +100,31 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          // width: 35%;
-          background-color: grey;
+          background-color: #161616;
+          transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+          cursor: pointer;
+          color: white;
+          margin-right: 0.7rem;
+          border-radius: 0.5rem;
+        }
+
+        &--btn-2 {
+          margin-right: 0rem;
+          margin-left: 0.7rem;
+        }
+
+        &--btn-1:hover,
+        &--btn-2:hover,
+        &--btn-1:active,
+        &--btn-2:active {
+          background-color: crimson;
         }
 
         &--quantity {
           width: 5rem;
           height: 70%;
           // background-color: red;
-          border-bottom: 0.5rem solid red;
+          border-bottom: 0.3rem solid crimson;
           // text-align: center;
           display: flex;
           justify-content: center;
@@ -126,16 +143,53 @@
       .checkout__buttons {
         display: flex;
         align-items: center;
-        width: 80%;
+        width: 90%;
 
         &--1 {
           width: 80%;
           display: flex;
+          justify-content: center;
+
+          .add-to-cart__btn {
+            text-align: center;
+            background-color: #161616;
+            width: 100%;
+            padding: 0.5rem 0rem;
+            border-radius: 0.7rem;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 0.1rem;
+            transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+          }
+
+          .add-to-cart__btn:hover,
+          .add-to-cart__btn:active {
+            background-color: crimson;
+          }
         }
 
         &--2 {
           width: 20%;
           display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .product-like_icon--container {
+            width: 100%;
+            margin-left: 1rem;
+          }
+
+          .product-like__icon {
+            font-size: 2rem;
+            display: flex;
+            justify-content: center;
+            margin-right: 0rem;
+            width: 100%;
+          }
+
+          .product-like__icon--text {
+            margin-right: 0rem;
+          }
         }
       }
     }
