--- a/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
+++ b/src/components/ProductPage/ProductSection/ProductView/ProductView.scss
@@ -3,14 +3,19 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-
+  border-radius: 0.7rem;
+  margin-bottom: 2rem;
   &__container {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 60%;
+    border-radius: 1rem;
+
     &--img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
+      object-position: center;
+      border-radius: inherit;
     }
   }
 }
